--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
       <img src="img/black-cloud.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="-400" data-ps-horizontal-position="0">     
     </article>
   </section>
+    
+  <section class="bgx">
+    <h2>Assassin’s Creed Valhalla</h2>
+    <p>
+      Assassin’s Creed Valhalla is my personal favorite of this new revamped trilogy of games in the franchise, but the reasons I enjoy it might be turn-offs for others. The improved combat and raiding with a platoon is the focus of the game, and while it is well-executed, it ultimately casts aside the stealth roots of the franchise.
+      <br><br>
+      This is a step the series needs to take; to break loose from what defined these games nearly a decade ago in order to become the standard-bearer for action RPGs.
+    </p>
+    <br>
+    <p>
+      I also would like to get this out of the way: If you were planning on picking this game up on PC at launch, don’t. Not to say the console version can’t be buggy at times, but the PC version was nigh unplayable for me (a problem I also had with Watch Dogs: Legion,) and I gave up trying to work through it crashing constantly after an hour in. Another writer on our team had an issue regarding an NPC that died, and in order to progress, they had to talk with that NPC. They are now soft locked out of proceeding any further in the game, and that’s with the day one patch.
+    </p>
+  </section>
 
 
 
