--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
   </section>
     
   <section class="bgx">
-    <h2>Assassin’s Creed Valhalla</h2>
+    <h2>Call Of Duty/h2>
     <p>
-      Assassin’s Creed Valhalla is my personal favorite of this new revamped trilogy of games in the franchise, but the reasons I enjoy it might be turn-offs for others. The improved combat and raiding with a platoon is the focus of the game, and while it is well-executed, it ultimately casts aside the stealth roots of the franchise.
-      <br><br>
-      This is a step the series needs to take; to break loose from what defined these games nearly a decade ago in order to become the standard-bearer for action RPGs.
+      Call Of Duty: Modern Warfare is half prequel, half reboot to the Modern Warfare franchise. The game takes place before the events of Call Of Duty 4: Modern Warfare, but since this is a re-imagining of the entire story, developer Infinity Ward still has plenty of room to not simply revisit the events of those earlier games, but alter and expand upon them however they see fit.
     </p>
     <br>
     <p>
