--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     </p>
     <br>
     <p>
-      I also would like to get this out of the way: If you were planning on picking this game up on PC at launch, don’t. Not to say the console version can’t be buggy at times, but the PC version was nigh unplayable for me (a problem I also had with Watch Dogs: Legion,) and I gave up trying to work through it crashing constantly after an hour in. Another writer on our team had an issue regarding an NPC that died, and in order to progress, they had to talk with that NPC. They are now soft locked out of proceeding any further in the game, and that’s with the day one patch.
+      It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
     </p>
-  </section>
+  </section>It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
 
 
 
