--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
     <p>
       It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
     </p>
-  </section>It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
-
-
-
+    <br>
+    <p>
+        Likewise, the hero-shooter aspects of Black Ops 3 and 4 are no more–and good riddance to that, as well. You have different operators to play as in multiplayer, but there are no special powers cluttering up matches. In Special Ops Operators do have passive and active abilities, but that’s co-op and it’s still toned down from what we saw in last year’s game.
+    </p>
+  </section>
 
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery.nicescroll.min.js" type="text/javascript"></script>
