--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
     <p>
         Likewise, the hero-shooter aspects of Black Ops 3 and 4 are no more–and good riddance to that, as well. You have different operators to play as in multiplayer, but there are no special powers cluttering up matches. In Special Ops Operators do have passive and active abilities, but that’s co-op and it’s still toned down from what we saw in last year’s game.
     </p>
+    <br>
+    <p>
+        And unlike Black Ops 4, Modern Warfare has a complete single-player campaign that’s well worth playing.
+    </p>
   </section>
 
 <script src="js/jquery.js" type="text/javascript"></script>
