--- a/index.html
+++ b/index.html
@@ -81,6 +81,30 @@
         And unlike Black Ops 4, Modern Warfare has a complete single-player campaign that’s well worth playing.
     </p>
   </section>
+    
+  <section class="contentXXX">
+    <article class="parallax-img-container">
+      <h1>The Witcher 3</h1>
+      <h3>Wild Hunt</h3>
+      <a class="btn" href="#">Download</a>
+      <img src="img/smoke-01.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="700" data-ps-horizontal-position="420" />
+      <img src="img/smoke-02.png" class="parallax-move" data-ps-z-index="3" data-ps-speed="0.5" data-ps-vertical-position="10" data-ps-horizontal-position="100" />
+      <img src="img/smoke-03.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="700" data-ps-horizontal-position="300" />
+      <img src="img/smoke-04.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.5" data-ps-vertical-position="500" data-ps-horizontal-position="620" />
+      <img src="img/smoke-05.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="1" data-ps-vertical-position="600" data-ps-horizontal-position="0" />
+      <img src="img/smoke-06.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.4" data-ps-vertical-position="200" data-ps-horizontal-position="520" />
+      <img src="img/smoke-07.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.3" data-ps-vertical-position="300" data-ps-horizontal-position="320" />
+      <img src="img/smoke-06.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.2" data-ps-vertical-position="-900" data-ps-horizontal-position="220" />
+      <img src="img/smoke-05.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.3" data-ps-vertical-position="-600" data-ps-horizontal-position="150" />
+      <img src="img/W7.png" class="parallax-move" data-ps-z-index="3" data-ps-speed="0.5" data-ps-vertical-position="-300" data-ps-horizontal-position="0" />
+      <img src="img/W6.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.5" data-ps-vertical-position="-350" data-ps-horizontal-position="300"  />
+      <img src="img/W4.png" class="parallax-move" data-ps-z-index="2" data-ps-speed="0.5" data-ps-vertical-position="-1000" data-ps-horizontal-position="700"  />
+      <img src="img/smoke-05.png" class="parallax-move" data-ps-z-index="1" data-ps-speed="0.3" data-ps-vertical-position="-600" data-ps-horizontal-position="150" />
+      <img src="img/black-cloud.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="-400" data-ps-horizontal-position="0">     
+    </article>
+  </section>
+
+
 
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery.nicescroll.min.js" type="text/javascript"></script>
