--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@
       <img src="img/black-cloud.png" class="parallax-move" data-ps-z-index="5" data-ps-speed="0.35" data-ps-vertical-position="-400" data-ps-horizontal-position="0">     
     </article>
   </section>
+    
+   <section class="bgx">
+    <h2>Call Of Duty</h2>
+    <p>
+      Call Of Duty: Modern Warfare is half prequel, half reboot to the Modern Warfare franchise. The game takes place before the events of Call Of Duty 4: Modern Warfare, but since this is a re-imagining of the entire story, developer Infinity Ward still has plenty of room to not simply revisit the events of those earlier games, but alter and expand upon them however they see fit.
+    </p>
+    <br>
+    <p>
+      It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
+    </p>
+    <br>
+    <p>
+        Likewise, the hero-shooter aspects of Black Ops 3 and 4 are no more–and good riddance to that, as well. You have different operators to play as in multiplayer, but there are no special powers cluttering up matches. In Special Ops Operators do have passive and active abilities, but that’s co-op and it’s still toned down from what we saw in last year’s game.
+    </p>
+    <br>
+    <p>
+        And unlike Black Ops 4, Modern Warfare has a complete single-player campaign that’s well worth playing.
+    </p>
+  </section>
 
 
 
