--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </section>
     
   <section class="bgx">
-    <h2>Call Of Duty</h2>
+    <h2>Call Of Duty Modern Warfare</h2>
     <p>
       Call Of Duty: Modern Warfare is half prequel, half reboot to the Modern Warfare franchise. The game takes place before the events of Call Of Duty 4: Modern Warfare, but since this is a re-imagining of the entire story, developer Infinity Ward still has plenty of room to not simply revisit the events of those earlier games, but alter and expand upon them however they see fit.
     </p>
