--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
    <section class="bgx">
     <h2>The Witcher 3</h2>
     <p>
-      Call Of Duty: Modern Warfare is half prequel, half reboot to the Modern Warfare franchise. The game takes place before the events of Call Of Duty 4: Modern Warfare, but since this is a re-imagining of the entire story, developer Infinity Ward still has plenty of room to not simply revisit the events of those earlier games, but alter and expand upon them however they see fit.
-    </p>
+      The Witcher: Wild Hunt is a story-driven open world RPG set in a visually stunning fantasy universe full of meaningful choices and impactful consequences. In The Witcher, you play as professional monster hunter Geralt of Rivia tasked with finding a child of prophecy in a vast open world rich with merchant cities, pirate islands, dangerous mountain passes, and forgotten caverns to explore.
     <br>
     <p>
       It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
