--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </p>
     <br>
     <p>
-      It’s also a return to a more grounded, realistic military shooter after years of futuristic entries (Call Of Duty: WWII notwithstanding). Gone are advanced mobility mechanics–double-jumping and wall-running–and good riddance. You’re still able to slide into a crouch, and Infinity Ward has added door-mechanics that allow you to either open doors slowly or burst through, making your entrances that much more dramatic.
+     The Witcher 3: Wild Hunt ($59.99) is the final installment in the action RPG series by Polish video game studio CD Projekt Red. Geralt of Rivia sets out one last time to slay beasts, collect bounties, and protect the child of destiny. CD Projekt Red changes the game formula by introducing a massive, open world filled with monsters to hunt and quests to undertake. But it also greatly improves the series's combat by making alchemy more accessible and tightening the action controls. The rich story narrative that drives the game is rife with tragedy, folkloric horror, humor, and intrigue, keeping you on your toes every step of the way. The Witcher 3 easily one of the best games released this year, and is one of the best RPGs released this generation. The Witcher 3: Wild Hunt is also available on PlayStation 4 and Xbox One.
     </p>
     <br>
     <p>
