--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@
     </p>
     <br>
     <p>
-        Likewise, the hero-shooter aspects of Black Ops 3 and 4 are no more–and good riddance to that, as well. You have different operators to play as in multiplayer, but there are no special powers cluttering up matches. In Special Ops Operators do have passive and active abilities, but that’s co-op and it’s still toned down from what we saw in last year’s game.
-    </p>
-    <br>
-    <p>
-        And unlike Black Ops 4, Modern Warfare has a complete single-player campaign that’s well worth playing.
+        At first glance, The Witcher 3 seems like your standard action/RPG hybrid. Geralt fights men and monsters alike with sword strikes and magical attacks, as you would in any game set in a fantasy universe. However, Geralt's strength lies in his versatility, and not his brute strength. Geralt is an accomplished fighter, but a group of armed thugs can easily make short work of him. It is the combination of swordplay and movement abilities, magical attacks, powerful sub-weapons, and potent potions that make Geralt the powerhouse that he is. The Witcher 3's combat is fast and thrilling, but also highly strategic. Making good use of Geralt's resources is always more productive than brandishing steel alone.
     </p>
   </section>
 
